--- a/spring/정리중.md
+++ b/spring/정리중.md
@@ -146,3 +146,36 @@ boss();
 ```
 
 비동기 방식이기 때문에 상위 프로세스는 하위 프로세스의 작업 완료 여부를 따로 신경쓰지 않는다. 또한 논블로킹 방식이기 때문에 상위 프로세스는 하위 프로세스에게 일을 맡기고 자신의 작업을 계속 수행할 수도 있다.
+
+
+
+Spring MVC와 Spring Webflux의 차이를 알기 위해서는 둘의 쓰레드 모델을 비교해야 한다.
+스프링 MVC는 Thread per Request Model로 구현되어 있다.
+서블릿 컨테이너들이 Thread per Request Model로 동작한다
+하나의 요청에 할당된 쓰레드는 응답을 반환할때까지의 모든 과정을 담당한다 -> 응답 마친 후 쓰레드 풀로 들어간다
+
+스프링부트에서는 톰캣의 쓰레드 풀의 쓰레드 개수를 200개로 세팅한다
+
+이 환경에서 서버끼리 REST API로 통신 작업을 하면, 상대 서버로 부터 데이터가 올때까지 자기 자신의 쓰레드는 Blocking 된다
+만약 상대 서버의 작업이 길어지면 Blocking 시간이 길어진다.
+쓰레드의 상태는 waiting으로 바뀌고 차후에 io 끝나면 runnable 상태가 된다
+
+시스템의 부하가 높은 상태에서는 context switching과 데이터 로딩 작업이 오버헤드의 원인이 된다
+
+쓰레드 풀 내의 200개의 쓰레드가 CPU 코어를 획득하기 위해서 경합하는 오버헤드도 발생한다
+
+webflux : 이벤트 루프 모델
+리액터 라이브러리와 netty를 기반으로 동작함
+netty의 쓰레드 풀의 쓰레드 개수는 200개가 아니라 머신 코어 개수의 2배
+
+JAVA NIO를 사용하기 때문에 쓰레드 상태가 Block되지 않는다
+
+쓰레드 per request 방식보다 쓰레드의 컨텍스트 스위칭 비용이 작고 코어를 차지하기 위한 쓰레드 경합이 적다
+
+높은 처리량의 이유 : 이벤트 루프와 non-blocking io를 사용하기 때문
+
+CPU intensive한 작업이나 blocking io를 사용할때는 webflux가 어울리지 않을 수 있다.
+
+reactor 는 반드시 비동기 non-blocking 사용하애 한다. event loop 쓰레드로 blocking 작업하면 안된다. blocking api를 위한 별도의 쓰레드 풀을 운영해야 한다.
+
+publishON(쓰레드풀) 메서드를 통해서 blocing 작업을 별도 쓰레드 풀에서 돌릴 수 있다
